# llm-narrative-framework

./: .coveragerc  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_RECOMMENDATIONS.md  CONTRIBUTING.docx  CONTRIBUTING.md  CONTRIBUTING.rtf  CONTRIBUTING.template.md  DEVELOPERS_GUIDE.template.md  README.docx  README.md  README.rtf  README.template.md  RESTORE_PRODUCTION.ps1  ROADMAP.md  TESTING.md  TESTING.template.md  WORK_SUMMARY_v12.2.3.md  analyze_study.ps1  analyze_study_subsets.ps1  audit_experiment.ps1  audit_study.ps1  commit.txt  compile_study.ps1  config.ini  evaluate_study.ps1  fix_experiment.ps1  fix_study.ps1  generate_factorial_commands.ps1  git_history_with_dates.txt  migrate_experiment.ps1  migrate_old_experiment.ps1  migrate_study.ps1  new_experiment.ps1  new_study.ps1  package-lock.json  package.json  (+21 more)
.github/workflows/: ci.yml  draft-pdf.yml
_archive/: fix_study.ps1  migrate_experiment.Tests.ps1  migrate_experiment.ps1  migrate_study.ps1  new_study.Tests.ps1  new_study.ps1  restore_experiment_config.py  test_restore_experiment_config.py  upgrade_legacy_experiment.py
config/: changelog_template.md
cz_templates/: keep_a_changelog_template.j2
data/: DATA_PREPARATION_DATA_DICTIONARY.template.md  README.md  README_DATA.md  README_DATA.template.md  adb_filtered_5000.txt  base_query.txt  filter_adb_raw.csv  personalities_db_1-1000.txt  personalities_db_1-500.txt  personalities_db_1001-2000.txt  personalities_db_2001-3000.txt  personalities_db_3001-4000.txt  personalities_db_4001-5000.txt  personalities_db_5001-5439.txt  sample_personalities.txt  sample_query.txt  sample_query_01.txt  sample_query_02.txt  sample_query_03.txt  sample_query_04.txt
data/backup/: personalities_db_backup_20250805_105353.txt
data/config/: adb_research_categories.json
data/foundational_assets/: adb_category_map.csv  country_codes.csv  eminence_scores.csv  eminence_scores_summary.txt  sf_chart_export.csv  sf_delineations_library.txt  subject_db.gold_standard.csv
data/processed/: subject_db.csv
data/sources/: adb_raw_export.txt  sf_chart_import.csv
docs/: CHANGELOG.md  CONTRIBUTING.md  DATA_PREPARATION_DATA_DICTIONARY.template.md  DOCUMENTATION.md  DOCUMENTATION.template.md  EXPERIMENT_LIFECYCLE_DATA_DICTIONARY.template.md  EXPERIMENT_WORKFLOW_DATA_DICTIONARY.md  EXPERIMENT_WORKFLOW_DATA_DICTIONARY.template.md  FRAMEWORK_MANUAL.template.md  LICENSE.md  LIFECYCLE_GUIDE.template.md  PROJECT_ROADMAP.md  REPLICATION_GUIDE.template.md  ROADMAP.md  TESTING.template.md  TESTING_GUIDE.template.md  article_cover_letter.template.md  article_main_text.md  article_main_text.template.md  article_supplementary_material.md  article_supplementary_material.template.md  changelog_template.md  cover_letter.md  custom_reference.docx  joss_cover_letter.md  joss_cover_letter.template.md  mermaid-config.json  meta_psychology_cover_letter.md  meta_psychology_cover_letter.template.md  pci_psychology_cover_letter.md  pci_psychology_cover_letter.template.md  puppeteer-config.json  study_article.md  study_supplements.md  supplement_table_pilot_models.csv
docs/diagrams/: analysis_log_format.txt  arch_llm_pipeline.mmd  arch_llm_pipeline_a.mmd  arch_llm_pipeline_b.mmd  arch_main_codebase.mmd  arch_prep_codebase.mmd  arch_project_overview.mmd  arch_test_suite.mmd  architecture_code.mmd  architecture_data_flow.mmd  (+103 more)
graphpad_prism/: statistical_analysis_validation.prism  statistical_validation.prism
pilot_studies/: README.md
scripts/: README_SCRIPTS.md  analyze_cutoff_parameters.py  build_docs.py  changelog_hook.py  clean_project.py  convert_py_to_txt.py  docx_postprocessor.py  extract_assembly_logic_text.py  finalize_release.py  generate_coverage_map.py  generate_scope_report.py  get_docstring_summary.py  inspect_adb_categories.py  lint_docstrings.py  lint_file_headers.py  list_project_files.py  prepare_assembly_logic_import.py  select_assembly_logic_subjects.py  select_gold_standard_subjects.py  validate_assembly_logic_subjects.py  validate_import_file.py
src/: ArgBuilder.ps1  __init__.py  aggregate_experiments.py  analyze_cutoff_parameters.py  analyze_llm_performance.py  analyze_performance.py  analyze_positional_bias.py  analyze_research_patterns.py  analyze_study_results.py  build_docs.py  build_llm_queries.py  build_queries.py  build_readme.py  compile_experiment.py  compile_experiment_results.py  compile_replication.py  compile_replication_results.py  compile_results.py  compile_study.py  compile_study_results.py  config_loader.py  config_reader.py  convert_py_to_txt.py  create_subject_database.py  create_subject_db.py  docx_postprocessor.py  experiment_aggregator.py  experiment_auditor.py  experiment_manager.py  fetch_adb_data.py  filter_adb_candidates.py  finalize_release.py  find_wikipedia_links.py  generate_architecture_diagram.py  generate_consolidated_effect_charts.py  generate_data_preparation_summary.py  generate_database.py  generate_eminence_scores.py  generate_ocean_scores.py  generate_personalities_db.py  (+45 more)
tests/: Test-Harness.ps1  audit_experiment.Tests.ps1  audit_study.Tests.ps1  conftest.py  fix_experiment.Tests.ps1  fix_study.Tests.ps1  migrate_experiment.Tests.ps1  migrate_old_experiment.Tests.ps1  migrate_study.Tests.ps1  new_experiment.Tests.ps1  new_study.Tests.ps1  process_study.Tests.ps1  run_all_ps_tests.ps1  run_all_tests.py  run_experiment.Tests.ps1  test_aggregate_experiments.py  test_analyze_llm_performance.py  test_analyze_performance.py  test_analyze_study_results.py  test_assembly_algorithm.py  test_batch_runner.py  test_bayes.py  test_build_docs.py  test_build_llm_queries.py  test_build_queries.py  test_compile_experiment_results.py  test_compile_replication_results.py  test_compile_results.py  test_compile_study_results.py  test_compilers.py  test_config_loader.py  test_convert_py_to_txt.py  test_create_subject_db.py  test_experiment_aggregator.py  test_experiment_auditor.py  test_experiment_manager.py  test_fetch_adb_data.py  test_find_wikipedia_links.py  test_generate_eminence_scores.py  test_generate_ocean_scores.py  (+40 more)
(+261 files in other folders)
