[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "llm-personality-matching"
version = "9.4.1"
description = "A reproducible pipeline for LLM personality matching experiments."
authors = [
    {name = "Peter Marko", email = "peter.j.marko@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "networkx",
    "requests>=2.32.4",
    "python-dotenv",
    "tqdm>=4.67.1",
    "seaborn",
    "matplotlib",
    "pingouin>=0.5.5",
    "thefuzz[speedup]>=0.22.1",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.8.3",
]

[tool.pdm]
# This tells PDM to use a virtual environment located in the project's .venv folder.
venv.in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm.scripts]
# ==============================================================================
# === PRIMARY TEST RUNNERS ===
# ==============================================================================
# This is the main entry point for all tests (Python and PowerShell).
test = {cmd = "python tests/run_all_tests.py {args}", help = "Run all tests (Python and PowerShell) with cleanup."}
cov = {shell = "coverage erase && coverage run -m pytest -p no:cov && coverage report", help="Run all tests with coverage analysis."}
cov-file = {shell = "coverage erase && coverage run -m pytest -p no:cov {args} && coverage report", help="Run coverage for a specific test file by its full path."}
cov-html = {shell = "coverage erase && coverage run -m pytest -p no:cov && coverage html", help="Run all tests and generate an HTML coverage report."}

# ==============================================================================
# === MAINTENANCE, LINTING & REPORTING ===
# ==============================================================================
clean = {cmd = "python scripts/maintenance/clean_project.py", help = "Clean up temporary and generated files."}
scope-report = "python scripts/maintenance/generate_scope_report.py"
list-files = "python scripts/maintenance/list_project_files.py"
txt-copy = "python scripts/maintenance/convert_py_to_txt.py"
lint = {composite = ["check-headers", "lint-docstrings"], help="Run all read-only linting checks."}
lint-fix = {composite = ["lint-headers-fix", "lint-docstrings"], help="Run all linters and apply automatic fixes."}
check-headers = {cmd = "python scripts/lint/lint_file_headers.py", help = "Check headers and footers on all project scripts."}
lint-headers-fix = {cmd = "python scripts/lint/lint_file_headers.py --fix", help = "Fix headers and footers on all project scripts."}
lint-docstrings = {cmd = "python scripts/lint/lint_docstrings.py {args}", help = "Check all scripts for docstring compliance (--deep for full scan)."}

# ==============================================================================
# === BUILD & RELEASE WORKFLOW ===
# ==============================================================================
build-docs = "python scripts/build/build_docs.py"
commit = {cmd = "cz commit", help = "Create a new commit using the interactive Commitizen prompt."}
release = {cmd = "python scripts/build/finalize_release.py", help = "Finalize a new release (bump, changelog, tag)."}

# ==============================================================================
# === CORE PROJECT WORKFLOWS ===
# ==============================================================================
# Data preparation workflow shortcuts
prep-data = "pwsh -ExecutionPolicy Bypass -File ./prepare_data.ps1"
# Main workflow shortcuts
new-exp = "pwsh -ExecutionPolicy Bypass -File ./new_experiment.ps1"
aud-exp = "pwsh -ExecutionPolicy Bypass -File ./audit_experiment.ps1"
fix-exp = "pwsh -ExecutionPolicy Bypass -File ./fix_experiment.ps1"
mig-exp = "pwsh -ExecutionPolicy Bypass -File ./migrate_experiment.ps1"
pro-stu = "pwsh -ExecutionPolicy Bypass -File ./process_study.ps1"
new-stu = "pwsh -ExecutionPolicy Bypass -File ./new_study.ps1"
aud-stu = "pwsh -ExecutionPolicy Bypass -File ./audit_study.ps1"
fix-stu = "pwsh -ExecutionPolicy Bypass -File ./fix_study.ps1"
mig-stu = "pwsh -ExecutionPolicy Bypass -File ./migrate_study.ps1"

# ==============================================================================
# === DETAILED TEST SUITES ===
# ==============================================================================
# --- Python Unit Tests ---
test-py-data-prep = {cmd = "pytest tests/data_preparation/", help = "Run all data preparation unit tests."}
test-py-exp = {cmd = "pytest tests/experiment_lifecycle/", help = "Run all experiment lifecycle unit tests."}
cov-exp = {shell = "coverage erase && coverage run -m pytest -p no:cov tests/experiment_lifecycle/ && coverage report --skip-covered", help = "Run experiment lifecycle tests with a focused coverage report."}
test-assembly = {cmd = "pytest tests/algorithm_validation/test_profile_generation_algorithm.py", help = "Run the core assembly algorithm integration test."}

# --- Integration Tests (All Layers) ---
test-l2 = "pwsh -File ./tests/testing_harness/data_preparation/layer2/run_layer2_test.ps1"
test-l3 = "pwsh ./tests/testing_harness/data_preparation/layer3/run_layer3_test.ps1 -Profile default"
test-l3-selection = "pwsh ./tests/algorithm_validation/validate_selection_algorithms.ps1"
test-l3-bypass = "pwsh ./tests/testing_harness/data_preparation/layer3/run_layer3_test.ps1 -Profile bypass"
test-l3-interactive = "pwsh ./tests/testing_harness/data_preparation/layer3/run_layer3_test.ps1 -Profile default -Interactive"
test-l4 = "pwsh -File ./tests/testing_harness/experiment_lifecycle/layer4/run_layer4_test.ps1"
test-l5 = "pwsh -File ./tests/testing_harness/experiment_lifecycle/layer5/run_layer5_test.ps1"

# --- PowerShell Pester Tests (By Suite) ---
# Experiment Lifecycle
test-ps-new-exp = "pwsh ./tests/experiment_lifecycle/new_experiment.Tests.ps1"
test-ps-audit-exp = "pwsh ./tests/experiment_lifecycle/audit_experiment.Tests.ps1"
test-ps-fix-exp = "pwsh ./tests/experiment_lifecycle/fix_experiment.Tests.ps1"
test-ps-migr-exp = "pwsh ./tests/experiment_lifecycle/migrate_experiment.Tests.ps1"
test-ps-exp = {composite = ["test-ps-new-exp", "test-ps-audit-exp", "test-ps-fix-exp", "test-ps-migr-exp"], help = "Run all PowerShell tests for the experiment lifecycle."}
# Study Lifecycle
test-ps-comp-study = "pwsh ./tests/experiment_lifecycle/compile_study.Tests.ps1"
test-ps-new-study = "pwsh ./tests/experiment_lifecycle/new_study.Tests.ps1"
test-ps-audit-study = "pwsh ./tests/experiment_lifecycle/audit_study.Tests.ps1"
test-ps-fix-study = "pwsh ./tests/experiment_lifecycle/fix_study.Tests.ps1"
test-ps-migr-study = "pwsh ./tests/experiment_lifecycle/migrate_study.Tests.ps1"
# Composite Runners
test-ps-all = "pwsh ./tests/run_all_ps_tests.ps1"
test-exp-all = {composite = ["test-py-exp", "test-ps-exp"], help = "Run all Python and PowerShell tests for the experiment lifecycle."}

[tool.commitizen]
name = "cz_conventional_commits"
version = "9.4.1"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
changelog_format = "keep_a_changelog"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "pypandoc>=1.15",
    "pillow>=10.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "commitizen>=3.31.0",
]
